fixed wrapping for summary view

--- a/src/styles/Components/Summary.scss
+++ b/src/styles/Components/Summary.scss
@@ -164,6 +164,8 @@
         }
 
         .question-title {
+            min-width: min-content;
+            flex-shrink: 1;
             font-weight: bold;
         }
 
@@ -173,8 +175,8 @@
             margin: 0;
             border-radius: 5px;
             height: min-content;
-            width: 100%;
-            margin-right: 3px;
+            margin-right: 3px;    
+            flex-grow: 1;
         }
     
         .sub-elements {
